Fix styles for about and course pages on mobile.

--- a/style.css
+++ b/style.css
@@ -229,15 +229,17 @@ section {
   margin-bottom: 20px;
 }
 
-.course {
-  padding: 20px 150px;
+.course h1 {
+  font-size: 1.5rem; /* Adjust this value as needed */
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 .course-content {
-  /* display: flex; */
   font-size: 1rem;
+  /* display: flex; */
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   max-width: 1000px;
   margin: 0 auto;
   flex-wrap: wrap;
